--- a/gila-screen.css
+++ b/gila-screen.css
@@ -68,6 +68,7 @@ acronym, .titleTip {
   background-color: transparent;
   font-weight: normal;
 }
+.headerTitle .language{float:right;color:white;font-size:1em;font-weight:normal;}
 
 .subHeader {
   color: white;
