--- a/gila-screen.css
+++ b/gila-screen.css
@@ -7,57 +7,17 @@
 
 /* ##### Common Styles ##### */
 
-body {
-  color: black;
-  background-color: rgb(243,242,235);
-  font-family: verdana, helvetica, arial, sans-serif;
-  font-size: 73%;  /* Enables font size scaling in MSIE */
-  margin: 0;
-  padding: 0;
-}
-
-html > body {
-  font-size: 9pt;
-}
-
-acronym, .titleTip {
-  border-bottom: 1px dotted rgb(168,140,83);
-  cursor: help;
-  margin: 0;
-  padding: 0;
-}
-
-.doNotDisplay {
-  display: none !important;
-}
-
-
-.smallCaps {
-  font-size: 117%;
-  font-variant: small-caps;
-}
-
+body { color: black;  background-color: rgb(243,242,235);  font-family: verdana, helvetica, arial, sans-serif;  font-size: 73%;  /* Enables font size scaling in MSIE */  margin: 0;  padding: 0;}
+html > body {  font-size: 9pt;}
+acronym, .titleTip {  border-bottom: 1px dotted rgb(168,140,83);  cursor: help;  margin: 0;  padding: 0;}
+.doNotDisplay {  display: none !important;}
+.smallCaps {  font-size: 117%;  font-variant: small-caps;}
 
 /* ##### Header ##### */
 
-#header {
-  color: inherit;
-  background-color: rgb(184,38,25);
-}
-
-.headerTitle {
-  margin: 0;
-  padding: 0.25em 4mm 0.25em 4mm;
-}
-
-.headerTitle a {
-  color: black;
-  background-color: transparent;
-  text-decoration: none;
-  font-size: 110%;  /* For MSIE */
-  font-weight: bold;
-  font-style: italic;
-}
+#header {  color: inherit;  background-color: rgb(184,38,25);}
+.headerTitle {  margin: 0;  padding: 0.25em 4mm 0.25em 4mm;}
+.headerTitle a {  color: black;  background-color: transparent;  text-decoration: none;  font-size: 110%;  /* For MSIE */  font-weight: bold;  font-style: italic;}
 
 .headerTitle > a {
   font-size: 138%;  /* For fully standards-compliant user agents */
@@ -70,23 +30,8 @@ acronym, .titleTip {
 }
 .headerTitle .language{float:right;color:white;font-size:1em;font-weight:normal;}
 
-.subHeader {
-  color: white;
-  background-color: black;
-  font-size: 109%;
-  text-align: center;
-  margin: 0;
-  padding: 0.5ex 0;
-}
-
-.subHeader a {
-  color: white;
-  background-color: black;
-  text-decoration: none;
-  font-weight: bold;
-  margin: 0;
-  padding: 0 1ex;
-}
+.subHeader {  color: white;  background-color: black;  font-size: 109%;  text-align: center;  margin: 0;  padding: 0.5ex 0;}
+.subHeader a {  color: white;  background-color: black;  text-decoration: none;  font-weight: bold;  margin: 0;  padding: 0 1ex;}
 
 .subHeader a:hover {
   color: black;
@@ -96,91 +41,23 @@ acronym, .titleTip {
 
 /* ##### Left Side Bar ##### */
 
-.leftSideBar {
-  width: 12.5em;
-  float: left;
-  clear: left;
-}
-
-.leftSideBar .sideBarTitle {
-  color: rgb(64,64,64);
-  background-color: rgb(230,223,207);
-  font-weight: bold;
-  margin: 0;
-  padding: 0.8ex 1ex;
-}
-
-.leftSideBar ul {
-  list-style-type: none;
-  list-style-position: outside;
-  margin: 0 0 1em 0;
-  padding: 0;
-}
-
-.leftSideBar li {
-  margin: 1ex;
-  padding: 0 0 1.25ex 0.75ex;
-}
-
-.leftSideBar a {
-  color: rgb(166,140,83);
-  background-color: transparent;
-  text-decoration: none;
-}
-
-.leftSideBar a:hover {
-  color: rgb(64,64,64);
-  background-color: transparent;
-  text-decoration: none;
-}
-
-.leftSideBar .sideBarText {
-  color: rgb(166,140,83);
-  background-color: transparent;
-  line-height: 1.25em;
-  margin: 1ex 0.25ex 1.5em 0.75ex;
-  padding: 0;
-  display: block;
-}
-
-.leftSideBar .sideBarText a {
-  text-decoration: underline;
-}
-
-.leftSideBar .sideBarText a:hover {
-  text-decoration: none;
-}
-
-.leftSideBar .thisPage {
-  color: rgb(64,64,64);
-  background-color: transparent;
-  font-weight: bold;
-}
-
+.leftSideBar {  width: 12.5em;  float: left;  clear: left;}
+.leftSideBar .sideBarTitle {  color: rgb(64,64,64);  background-color: rgb(230,223,207);  font-weight: bold;  margin: 0;  padding: 0.8ex 1ex;}
+.leftSideBar ul {  list-style-type: none;  list-style-position: outside;  margin: 0 0 1em 0;  padding: 0;}
+.leftSideBar li { margin: 1ex; padding: 0 0 0 0.75ex;}
+.leftSideBar a {  color: rgb(166,140,83);  background-color: transparent;  text-decoration: none;}
+.leftSideBar a:hover {  color: rgb(64,64,64);  background-color: transparent;  text-decoration: none;}
+.leftSideBar .sideBarText {  color: rgb(166,140,83);  background-color: transparent;  line-height: 1.25em;  margin: 1ex 0.25ex 1.5em 0.75ex;  padding: 0;  display: block;}
+.leftSideBar .sideBarText a {  text-decoration: underline;}
+.leftSideBar .sideBarText a:hover {  text-decoration: none;}
+.leftSideBar .thisPage {  color: rgb(64,64,64);  background-color: transparent;  font-weight: bold;}
 
 /* ##### Right Side Bar ##### */
 
-.rightSideBar {
-  width: 13em;
-  margin: 2ex 0.75ex 0 0;
-  padding: 0;
-  float: right;
-  clear: right;
-  border: 1px solid rgb(216,210,195);
-}
-
-[class~="rightSideBar"] {
-  margin-right: 1.5ex;
-}
-
-.rightSideBar .sideBarTitle {
-  color: black;
-  background-color: rgb(230,223,207);
-  font-weight: bold;
-  margin: 1.25ex 1ex;
-  padding: 0.9ex 1ex;
-}
-
+.rightSideBar {  width: 12.5em;  margin:0;  padding: 0;  float: right;  clear: right;}
+.rightSideBar .sideBarTitle {  color: rgb(64,64,64);  background-color: rgb(230,223,207);  font-weight: bold;  margin: 0;  padding: 0.8ex 1ex;}
+.rightSideBar ul {  list-style-type: none;  list-style-position: outside;  margin: 0 0 1em 0;  padding: 0;}
+.rightSideBar li { margin: 1ex 1ex 1ex 0; padding: 0 0 0 0.75ex;}
 .rightSideBar a {
   color: rgb(166,140,83);
   background-color: transparent;
@@ -218,7 +95,7 @@ acronym, .titleTip {
   background-color: white;
   text-align: justify;
   line-height: 1.5em;
-  margin: 0 0 0 12.5em;
+  margin: 0 12.5em;
   padding: 0.5ex 15em 1em 1em;
   border-left: 1px solid rgb(216,210,195);
 }
